[package]
name = "fast-to-sportsmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
quick-xml = {version = "0.31.0", features = ["serialize"]}
scraper = "0.13.0"
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.6"
serde_json = "1.0"